--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\..\..\HackandCraft\HackandCraft\HackandCraft.Api\packages.config" />
   <repository path="..\Api\packages.config" />
+  <repository path="..\Model\packages.config" />
 </repositories>
