added mail queue and round create eps

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\..\..\HackandCraft\HackandCraft\HackandCraft.Api\packages.config" />
   <repository path="..\Api\packages.config" />
   <repository path="..\Model\packages.config" />
+  <repository path="..\UFOStart.MailQueue\packages.config" />
 </repositories>
