--- a/UFOStart.MailQueue/App.config
+++ b/UFOStart.MailQueue/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=ufo_Dev;User Id=ufo_user;Password=Popov2010;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
