--- a/UFOStart.MailQueue/packages.config
+++ b/UFOStart.MailQueue/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HackandCraft.Config" version="1.0.76" targetFramework="net45" />
+  <package id="HackandCraft.DBVC" version="1.0.76" targetFramework="net45" />
   <package id="HackandCraft.Mail" version="1.0.76" targetFramework="net45" />
   <package id="OctoPack" version="2.0.20" targetFramework="net45" />
+  <package id="TopShelf" version="3.1.1" targetFramework="net45" />
 </packages>
