--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Need.cs" />
     <Compile Include="Profile.cs" />
     <Compile Include="Round.cs" />
+    <Compile Include="Service.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
