--- a/Api/Web.config
+++ b/Api/Web.config
@@ -12,7 +12,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=ufo_Dev;User Id=ufo_user;Password=Popov2010;" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=ufo_Dev;User Id=ufo_user;Password=Popov2010;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -39,4 +39,12 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
