--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Company.cs" />
     <Compile Include="Expert.cs" />
+    <Compile Include="Invite.cs" />
     <Compile Include="Need.cs" />
     <Compile Include="Pledge.cs" />
     <Compile Include="Profile.cs" />
