--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Profile.cs" />
     <Compile Include="Round.cs" />
     <Compile Include="Service.cs" />
+    <Compile Include="Tag.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
