--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Product.cs" />
     <Compile Include="Profile.cs" />
     <Compile Include="Round.cs" />
+    <Compile Include="Search.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Template.cs" />
