--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -55,10 +55,12 @@
     <Compile Include="Round.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="Service.cs" />
+    <Compile Include="Stage.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
