--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Services\Messaging\MessageHelpers.cs" />
     <Compile Include="Services\Messaging\RoundCreate.cs" />
     <Compile Include="Services\Messaging\WelcomeEmail.cs" />
+    <Compile Include="Services\Round\CreateEndorsement.cs" />
     <Compile Include="Services\Round\FulfilRound.cs" />
     <Compile Include="Services\SaveSkills.cs" />
   </ItemGroup>
