--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Application.cs" />
     <Compile Include="Company.cs" />
+    <Compile Include="Endorsement.cs" />
     <Compile Include="Expert.cs" />
     <Compile Include="Invite.cs" />
     <Compile Include="Invites.cs" />
