--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="Services\Messaging\CompanyInviteEmail.cs" />
+    <Compile Include="Services\Messaging\ApplicationFounderEmail.cs" />
     <Compile Include="Services\Messaging\MentorApproveEmail.cs" />
     <Compile Include="Services\Messaging\MessageHelpers.cs" />
     <Compile Include="Services\Messaging\RoundCreate.cs" />
