--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -185,6 +185,10 @@
       <Project>{68B9F4F4-CE8C-4937-AFD9-3FC48520A162}</Project>
       <Name>UFOStart.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\StartupValue\StartupValue.csproj">
+      <Project>{57116D46-8F82-4005-AA8F-5B482D7832E9}</Project>
+      <Name>StartupValue</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="NLog.config">
