--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Invites.cs" />
     <Compile Include="Need.cs" />
     <Compile Include="Offer.cs" />
+    <Compile Include="Picture.cs" />
     <Compile Include="Pledge.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Profile.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Stage.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Template.cs" />
+    <Compile Include="Update.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Workflow.cs" />
