added investment endpoints

--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Controllers\FundingController.cs" />
     <Compile Include="Controllers\NeedController.cs" />
     <Compile Include="Controllers\PledgeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
