--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Invite.cs" />
     <Compile Include="Invites.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="Mentors.cs" />
     <Compile Include="Need.cs" />
     <Compile Include="Offer.cs" />
     <Compile Include="Picture.cs" />
