--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UFOStart.Api</RootNamespace>
     <AssemblyName>UFOStart.Api</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort>44304</IISExpressSSLPort>
@@ -32,6 +32,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,24 +41,25 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HackandCraft.Api, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="HackandCraft.Api">
       <HintPath>..\packages\HackandCraft.Api.1.0.74\lib\net40\HackandCraft.Api.dll</HintPath>
     </Reference>
     <Reference Include="HackandCraft.Auth">
-      <HintPath>..\packages\HackandCraft.Api.1.0.74\lib\net45\HackandCraft.Auth.dll</HintPath>
+      <HintPath>..\packages\HackandCraft.Api.1.0.74\lib\net40\HackandCraft.Auth.dll</HintPath>
     </Reference>
-    <Reference Include="HackandCraft.Config">
-      <HintPath>..\packages\HackandCraft.Api.1.0.74\lib\net45\HackandCraft.Config.dll</HintPath>
+    <Reference Include="HackandCraft.Config, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\HackandCraft.Config.1.0.76\lib\net40\HackandCraft.Config.dll</HintPath>
     </Reference>
     <Reference Include="HackandCraft.DBVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\HackandCraft.Mail.1.0.76\lib\net45\HackandCraft.DBVC.dll</HintPath>
+      <HintPath>..\packages\HackandCraft.DBVC.1.0.76\lib\net40\HackandCraft.DBVC.dll</HintPath>
     </Reference>
     <Reference Include="HackandCraft.Mail">
-      <HintPath>..\packages\HackandCraft.Mail.1.0.76\lib\net45\HackandCraft.Mail.dll</HintPath>
+      <HintPath>..\packages\HackandCraft.Mail.1.0.76\lib\net40\HackandCraft.Mail.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -79,8 +81,6 @@
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\HackandCraft.Api.1.0.74\lib\net45\System.Web.Helpers.dll</HintPath>
@@ -105,9 +105,7 @@
       <Private>True</Private>
       <HintPath>..\packages\HackandCraft.Api.1.0.74\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
