--- a/Api/Web.config
+++ b/Api/Web.config
@@ -14,9 +14,17 @@
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=ufo_Dev;User Id=ufo_user;Password=Popov2010;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
     <httpRuntime/>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.5"/>
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
         <add namespace="System.Web.Helpers"/>
