added unconfirmed mentor aproval

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\..\HackandCraft\HackandCraft\HackandCraft.Api\packages.config" />
+  <repository path="..\..\..\HackandCraft\HackandCraft\HackandCraft.DBVC\packages.config" />
   <repository path="..\Api\packages.config" />
   <repository path="..\LinkedIn\packages.config" />
   <repository path="..\Model\packages.config" />
