--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,5 +5,6 @@
   <repository path="..\Api\packages.config" />
   <repository path="..\LinkedIn\packages.config" />
   <repository path="..\Model\packages.config" />
+  <repository path="..\StartupValue\packages.config" />
   <repository path="..\UFOStart.MailQueue\packages.config" />
 </repositories>
