added api back in

--- a/Api/Web.config
+++ b/Api/Web.config
@@ -12,7 +12,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=ufo_Dev;User Id=ufo_user;Password=Popov2010;" providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=devApidb.cloudapp.net\feuerbach,1984;Initial Catalog=ufo_Dev;User Id=ufo_user;Password=Popov2010;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
