--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -127,16 +127,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\CompanyController.cs" />
-    <Compile Include="Controllers\FundingController.cs" />
-    <Compile Include="Controllers\MentorController.cs" />
-    <Compile Include="Controllers\NeedController.cs" />
-    <Compile Include="Controllers\PledgeController.cs" />
-    <Compile Include="Controllers\ProductController.cs" />
-    <Compile Include="Controllers\RoundController.cs" />
-    <Compile Include="Controllers\TagController.cs" />
-    <Compile Include="Controllers\TemplateController.cs" />
-    <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\Admin\NeedController.cs" />
+    <Compile Include="Controllers\Admin\TemplateController.cs" />
+    <Compile Include="Controllers\Web\CompanyController.cs" />
+    <Compile Include="Controllers\Web\FundingController.cs" />
+    <Compile Include="Controllers\Web\MentorController.cs" />
+    <Compile Include="Controllers\Web\NeedController.cs" />
+    <Compile Include="Controllers\Web\PledgeController.cs" />
+    <Compile Include="Controllers\Web\ProductController.cs" />
+    <Compile Include="Controllers\Web\RoundController.cs" />
+    <Compile Include="Controllers\Web\TagController.cs" />
+    <Compile Include="Controllers\Web\TemplateController.cs" />
+    <Compile Include="Controllers\Web\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
