need service added

--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Admin\NeedController.cs" />
+    <Compile Include="Controllers\Admin\ServiceController.cs" />
     <Compile Include="Controllers\Admin\TemplateController.cs" />
     <Compile Include="Controllers\Web\CompanyController.cs" />
     <Compile Include="Controllers\Web\FundingController.cs" />
