Static class for static content added, Content class added for root level (for Static), get/set static content ep

--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <Compile Include="Controllers\Admin\NeedController.cs" />
     <Compile Include="Controllers\Admin\ServiceController.cs" />
+    <Compile Include="Controllers\Admin\StaticController.cs" />
     <Compile Include="Controllers\Admin\TemplateController.cs" />
     <Compile Include="Controllers\Web\CompanyController.cs" />
     <Compile Include="Controllers\Web\FundingController.cs" />
