--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Activity.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="Company.cs" />
+    <Compile Include="Content.cs" />
     <Compile Include="Endorsement.cs" />
     <Compile Include="Expert.cs" />
     <Compile Include="Funding.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Service.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="Stage.cs" />
+    <Compile Include="Static.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="Update.cs" />
