--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -47,7 +47,9 @@
   <ItemGroup>
     <Compile Include="Activity.cs" />
     <Compile Include="Application.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="Company.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Content.cs" />
     <Compile Include="Endorsement.cs" />
     <Compile Include="Expert.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="Static.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Template.cs" />
+    <Compile Include="Type.cs" />
     <Compile Include="Update.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
