--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Company.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Content.cs" />
+    <Compile Include="Currency.cs" />
     <Compile Include="Endorsement.cs" />
     <Compile Include="Expert.cs" />
     <Compile Include="Funding.cs" />
