--- a/Model/UFOStart.Model.csproj
+++ b/Model/UFOStart.Model.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Search.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="Skill.cs" />
+    <Compile Include="Slug.cs" />
     <Compile Include="Stage.cs" />
     <Compile Include="Static.cs" />
     <Compile Include="Tag.cs" />
