removed error catching from linkedin in api hit

--- a/LinkedIn/packages.config
+++ b/LinkedIn/packages.config
@@ -24,5 +24,7 @@
   <package id="DotNetOpenAuth.OpenIdOAuth" version="4.3.0.13117" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.5" targetFramework="net45" />
+  <package id="NLog" version="2.0.1.2" targetFramework="net45" />
+  <package id="NLog.Config" version="2.0.1.2" targetFramework="net45" />
   <package id="twitterizer" version="2.4.2" targetFramework="net45" />
 </packages>
