--- a/LinkedIn/packages.config
+++ b/LinkedIn/packages.config
@@ -22,6 +22,7 @@
   <package id="DotNetOpenAuth.OpenId.RelyingParty.UI" version="4.3.0.13117" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenIdInfoCard.UI" version="4.3.0.13117" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenIdOAuth" version="4.3.0.13117" targetFramework="net45" />
+  <package id="HackandCraft.DBVC" version="1.0.79" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.5" targetFramework="net45" />
   <package id="NLog" version="2.0.1.2" targetFramework="net45" />
