--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\HackandCraft\HackandCraft\HackandCraft.Mail\packages.config" />
   <repository path="..\Api\packages.config" />
   <repository path="..\LinkedIn\packages.config" />
   <repository path="..\Model\packages.config" />
