--- a/UFOStart.MailQueue/UFOStart.MailQueue.csproj
+++ b/UFOStart.MailQueue/UFOStart.MailQueue.csproj
@@ -42,6 +42,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\HackandCraft.Config.1.0.76\lib\net45\HackandCraft.DBVC.dll</HintPath>
     </Reference>
+    <Reference Include="HackandCraft.Mail, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Expaway\Code\packages\HackandCraft.Mail.1.0.79\lib\net45\HackandCraft.Mail.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\HackandCraft.Mail.1.0.76\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -70,12 +74,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\HackandCraft\HackandCraft\HackandCraft.Mail\HackandCraft.Mail.csproj">
-      <Project>{1086ddb1-2d6e-42ef-98f3-8aa4912198e9}</Project>
-      <Name>HackandCraft.Mail</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
