--- a/Api/UFOStart.Api.csproj
+++ b/Api/UFOStart.Api.csproj
@@ -56,10 +56,11 @@
     </Reference>
     <Reference Include="HackandCraft.DBVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\HackandCraft.DBVC.1.0.76\lib\net45\HackandCraft.DBVC.dll</HintPath>
+      <HintPath>..\packages\HackandCraft.Mail.1.0.81\lib\net45\HackandCraft.DBVC.dll</HintPath>
     </Reference>
-    <Reference Include="HackandCraft.Mail">
-      <HintPath>..\packages\HackandCraft.Mail.1.0.76\lib\net40\HackandCraft.Mail.dll</HintPath>
+    <Reference Include="HackandCraft.Mail, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\HackandCraft.Mail.1.0.81\lib\net45\HackandCraft.Mail.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -68,11 +69,11 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\HackandCraft.Mail.1.0.76\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\HackandCraft.Mail.1.0.81\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=2.0.1.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NLog.2.0.1.2\lib\net45\NLog.dll</HintPath>
+      <HintPath>..\packages\HackandCraft.Mail.1.0.81\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
