added detailed logging

--- a/Api/NLog.config
+++ b/Api/NLog.config
@@ -11,7 +11,7 @@
             layout="${machinename} ${longdate} ${uppercase:${level}} ${message}">
     </target>
     <target xsi:type="Mail" name="MailTarget" html="true" subject="API ERROR - UFO" body="${machinename}|${message}"
-        layout="${machinename}|${longdate}|${level:uppercase=true}|${logger}|${message}|${callsite:className=true:includeSourcePath=true:methodName=true}"
+               layout="${callsite:className=true:includeSourcePath=true:methodName=true}|${machinename}|${longdate}|${level:uppercase=true}|${logger}|${message}"
         to="errors@hackandcraft.com"
         from="errors@hackandcraft.com"
         smtpAuthentication="Basic"
